ajuste imagens css

--- a/Q11a.html
+++ b/Q11a.html
@@ -34,7 +34,7 @@
             ambiente.
         </p>
 
-        <img src="img/imgQ11.PNG" alt="">
+        <img class="img2" src="img/imgQ11.PNG" alt="">
         <p><i>FONTE: <a target="_blank" href="http://inep.gov.br/educacao-superior/enade/provas-e-gabaritos">Provas e
                     Gabaritos Enade</a></i></p>
 
