--- a/discursivas/discursiva2.html
+++ b/discursivas/discursiva2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,9 +10,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Questão Discursiva 2</title>
 </head>
+
 <body class="fundo1">
     <div class="container mt-3">
-    <h4 class="text-center corEnade">QUESTÃO DISCURSIVA 2</h4>
+        <h4 class="text-center corEnade">QUESTÃO DISCURSIVA 2</h4>
         <p class="mt-4">
             A Síntese de Indicadores Sociais (SIS 2010) utiliza-se
             da Pesquisa Nacional por Amostra de Domicílios (PNAD)
@@ -20,7 +22,7 @@
             os maiores índices se concentram na população idosa, em
             camadas de menores rendimentos e predominantemente
             na região Nordeste, conforme dados do texto a seguir.
-            
+
         </p>
         <p>
             A taxa de analfabetismo referente a pessoas de 15 anos
@@ -39,75 +41,77 @@
         </p>
         <i>
             SIS 2010: Mulheres mais escolarizadas são mães mais tarde e têm menos filhos.
-            Disponível em: <A href="www.ibge.gov.br/home/presidencia/noticias" target="_blank">www.ibge.gov.br/home/presidencia/noticias></A>. Acesso em: 25 ago. 2011 (adaptado)
+            Disponível em: <A href="www.ibge.gov.br/home/presidencia/noticias"
+                target="_blank">www.ibge.gov.br/home/presidencia/noticias></A>. Acesso em: 25 ago. 2011 (adaptado)
         </i>
         <br>
-        <img src="/img/imgQD2.PNG" alt="">
+        <img class="img" src="/img/imgQD2.PNG" alt="">
         <p>
             Com base nos dados apresentados, redija um texto dissertativo acerca da importância de políticas e programas
             educacionais para a erradicação do analfabetismo e para a empregabilidade, considerando as disparidades
             sociais e as dificuldades de obtenção de emprego provocadas pelo analfabetismo. Em seu texto, apresente uma
             proposta para a superação do analfabetismo e para o aumento da empregabilidade. (valor: 10,0 pontos)
-        </p>    
+        </p>
 
-        
-    <div class="border container">
-        <h4 class="text-center">RASCUNHO</h4>
-        <table>
-            <tr>1
-                <hr>
-            </tr>
-            <tr>2
-                <hr>
-            </tr>
-            <tr>3
-                <hr>
-            </tr>
-            <tr>4
-                <hr>
-            </tr>
-            <tr>5
-                <hr>
-            </tr>
-            <tr>6
-                <hr>
-            </tr>
-            <tr>7
-                <hr>
-            </tr>
-            <tr>8
-                <hr>
-            </tr>
-            <tr>9
-                <hr>
-            </tr>
-            <tr>10
-                <hr>
-            </tr>
-            <tr>11
-                <hr>
-            </tr>
-            <tr>12
-                <hr>
-            </tr>
-            <tr>13
-                <hr>
-            </tr>
-            <tr>14
-                <hr>
-            </tr>
-            <tr>15
-                <hr>
-            </tr>                        
-        </table>
-    </div>
-        <footer class="text-center"> 
-            <p> 
-                <i>Mais informações sobre o Enade, consultar o site do Enade no link: 
+
+        <div class="border container">
+            <h4 class="text-center">RASCUNHO</h4>
+            <table>
+                <tr>1
+                    <hr>
+                </tr>
+                <tr>2
+                    <hr>
+                </tr>
+                <tr>3
+                    <hr>
+                </tr>
+                <tr>4
+                    <hr>
+                </tr>
+                <tr>5
+                    <hr>
+                </tr>
+                <tr>6
+                    <hr>
+                </tr>
+                <tr>7
+                    <hr>
+                </tr>
+                <tr>8
+                    <hr>
+                </tr>
+                <tr>9
+                    <hr>
+                </tr>
+                <tr>10
+                    <hr>
+                </tr>
+                <tr>11
+                    <hr>
+                </tr>
+                <tr>12
+                    <hr>
+                </tr>
+                <tr>13
+                    <hr>
+                </tr>
+                <tr>14
+                    <hr>
+                </tr>
+                <tr>15
+                    <hr>
+                </tr>
+            </table>
+        </div>
+        <footer class="text-center">
+            <p>
+                <i>Mais informações sobre o Enade, consultar o site do Enade no link:
                     <a target="_blank" href="http://enade.inep.gov.br/enade/#!/index"> Enade Inep </a>
                 </i>
             </p>
         </footer>
     </div>
 </body>
+
 </html>
