--- a/discursivas/discursiva5.html
+++ b/discursivas/discursiva5.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,9 +10,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Questão Discursiva 5</title>
 </head>
+
 <body class="fundo1">
     <div class="container mt-3">
-    <h4 class="text-center corEnade">QUESTÃO DISCURSIVA 5</h4>
+        <h4 class="text-center corEnade">QUESTÃO DISCURSIVA 5</h4>
         <p class="mt-4">
             Jogos de tabuleiro são atividades comuns de entretenimento na vida cotidiana das
             pessoas. Uma de suas características é a necessidade do uso de um tabuleiro
@@ -23,7 +25,7 @@
             de trigo na primeira casa do tabuleiro, 2 na segunda casa, 4 na terceira casa, 8 na
             quarta casa e assim dobrando-se sucessivamente até a última casa.
         </p>
-        <img src="/img/imgQD5.PNG" alt="">
+        <img class="img" src="/img/imgQD5.PNG" alt="">
         <br><br>
         <p>
             Considerando o tabuleiro 4 x 4 ilustrado acima, contendo a indicação da ordem das casas, construa um único
@@ -39,64 +41,65 @@
             (valor: 2,0 pontos)
         </p>
 
-        
-    <div class="border container">
-        <h4 class="text-center">RASCUNHO</h4>
-        <table>
-            <tr>1
-                <hr>
-            </tr>
-            <tr>2
-                <hr>
-            </tr>
-            <tr>3
-                <hr>
-            </tr>
-            <tr>4
-                <hr>
-            </tr>
-            <tr>5
-                <hr>
-            </tr>
-            <tr>6
-                <hr>
-            </tr>
-            <tr>7
-                <hr>
-            </tr>
-            <tr>8
-                <hr>
-            </tr>
-            <tr>9
-                <hr>
-            </tr>
-            <tr>10
-                <hr>
-            </tr>
-            <tr>11
-                <hr>
-            </tr>
-            <tr>12
-                <hr>
-            </tr>
-            <tr>13
-                <hr>
-            </tr>
-            <tr>14
-                <hr>
-            </tr>
-            <tr>15
-                <hr>
-            </tr>                        
-        </table>
-    </div>
-        <footer class="text-center"> 
-            <p> 
-                <i>Mais informações sobre o Enade, consultar o site do Enade no link: 
+
+        <div class="border container">
+            <h4 class="text-center">RASCUNHO</h4>
+            <table>
+                <tr>1
+                    <hr>
+                </tr>
+                <tr>2
+                    <hr>
+                </tr>
+                <tr>3
+                    <hr>
+                </tr>
+                <tr>4
+                    <hr>
+                </tr>
+                <tr>5
+                    <hr>
+                </tr>
+                <tr>6
+                    <hr>
+                </tr>
+                <tr>7
+                    <hr>
+                </tr>
+                <tr>8
+                    <hr>
+                </tr>
+                <tr>9
+                    <hr>
+                </tr>
+                <tr>10
+                    <hr>
+                </tr>
+                <tr>11
+                    <hr>
+                </tr>
+                <tr>12
+                    <hr>
+                </tr>
+                <tr>13
+                    <hr>
+                </tr>
+                <tr>14
+                    <hr>
+                </tr>
+                <tr>15
+                    <hr>
+                </tr>
+            </table>
+        </div>
+        <footer class="text-center">
+            <p>
+                <i>Mais informações sobre o Enade, consultar o site do Enade no link:
                     <a target="_blank" href="http://enade.inep.gov.br/enade/#!/index"> Enade Inep </a>
                 </i>
             </p>
         </footer>
     </div>
 </body>
+
 </html>
