--- a/Q33a.html
+++ b/Q33a.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="imagem/png" href="img/logoEnade.png"/>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>  
+    <link rel="icon" type="imagem/png" href="img/logoEnade.png" />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <link rel="stylesheet" href="css/style.css">
     <script src="funçoes.js"> </script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -46,8 +46,9 @@
         <p>
             Quadro 1
         </p>
-        <img src="img/imgQ33-1.PNG" alt="">
-        <p><i>FONTE: <a target="_blank" href="http://inep.gov.br/educacao-superior/enade/provas-e-gabaritos">Provas e Gabaritos Enade</a></i></p>
+        <img class="img2" src="img/imgQ33-1.PNG" alt="">
+        <p><i>FONTE: <a target="_blank" href="http://inep.gov.br/educacao-superior/enade/provas-e-gabaritos">Provas e
+                    Gabaritos Enade</a></i></p>
         <p>
             Em que S indica que SIST estava disponível no instante de tempo (InstX) de número X e <br>
             N indica que o SIST não estava disponível no instante de tempo (InstX) de número X.
@@ -55,8 +56,9 @@
         <p>
             Quadro 2
         </p>
-        <img src="img/imgQ33-2.PNG" alt="">
-        <p><i>FONTE: <a target="_blank" href="http://inep.gov.br/educacao-superior/enade/provas-e-gabaritos">Provas e Gabaritos Enade</a></i></p>
+        <img class="img2" src="img/imgQ33-2.PNG" alt="">
+        <p><i>FONTE: <a target="_blank" href="http://inep.gov.br/educacao-superior/enade/provas-e-gabaritos">Provas e
+                    Gabaritos Enade</a></i></p>
         <p>
             Em que F indica que SIST falhou quando se fez a ele a solicitação (SoliX) de número X e <br>
             N indica que o SIST não falhou quando se fez a ele a solicitação (SoliX) de número X.
@@ -64,8 +66,9 @@
         <p>
             Quadro 3
         </p>
-        <img src="img/imgQ33-3.PNG" alt="">
-        <p><i>FONTE: <a target="_blank" href="http://inep.gov.br/educacao-superior/enade/provas-e-gabaritos">Provas e Gabaritos Enade</a></i></p>
+        <img class="img2" src="img/imgQ33-3.PNG" alt="">
+        <p><i>FONTE: <a target="_blank" href="http://inep.gov.br/educacao-superior/enade/provas-e-gabaritos">Provas e
+                    Gabaritos Enade</a></i></p>
         <p>
             O valor indica o instante, em uma dada unidade de tempo, em que ocorreu a falha (FalX) de número X.
         </p>
@@ -115,9 +118,9 @@
             <a class="col-auto" href="Q34a.html"> Próxima Questão </a>
         </div>
 
-        <footer class="text-center"> 
-            <p> 
-                <i>Mais informações sobre o Enade, consultar o site do Enade no link: 
+        <footer class="text-center">
+            <p>
+                <i>Mais informações sobre o Enade, consultar o site do Enade no link:
                     <a target="_blank" href="http://enade.inep.gov.br/enade/#!/index"> Enade Inep </a>
                 </i>
             </p>
@@ -127,14 +130,14 @@
 <script>
     function getCorreta() {
 
-    return document.getElementById("correta").value
+        return document.getElementById("correta").value
     }
 
     function getCheckado() {
 
-    input = document.querySelectorAll('input')
+        input = document.querySelectorAll('input')
 
-    console.log(input)
+        console.log(input)
 
         for (c = 0; c < input.length; c++) {
 
@@ -149,38 +152,39 @@
 
     var entrada;
     var correta;
-    
+
     function correçao33() {
-        if(entrada != undefined){
+        if (entrada != undefined) {
 
-        entrada = getCheckado()
-        correta = getCorreta()
+            entrada = getCheckado()
+            correta = getCorreta()
 
-        if (entrada == correta) {
-            Swal.fire({
-			icon: 'success',
-			title: 'Boa!!',
-			text: `Parabéns! A alternativa correta realmente é a letra "d) 40; 30; 4."`
-		  })
-            setInterval(() => {
-                window.open ('Q34a.html','_self',false)
-            }, 60000);
-        }   
-        
+            if (entrada == correta) {
+                Swal.fire({
+                    icon: 'success',
+                    title: 'Boa!!',
+                    text: `Parabéns! A alternativa correta realmente é a letra "d) 40; 30; 4."`
+                })
+                setInterval(() => {
+                    window.open('Q34a.html', '_self', false)
+                }, 60000);
+            }
+
+            else {
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Oops...',
+                    text: `Que pena, voce errou! A alternativa correta é a letra: "d) 40; 30; 4."`
+                })
+                setInterval(() => {
+                    window.open('Q34a.html', '_self', false)
+                }, 60000);
+            }
+        }
         else {
-            Swal.fire({
-			icon: 'error',
-			title: 'Oops...',
-			text: `Que pena, voce errou! A alternativa correta é a letra: "d) 40; 30; 4."`
-		  })
-          setInterval(() => {
-            window.open ('Q34a.html','_self',false)
-          }, 60000);
+            inputVazio();
         }
     }
-    else{
-        inputVazio();
-    }
-}
 </script>
+
 </html>
