--- a/Q6a.html
+++ b/Q6a.html
@@ -27,7 +27,7 @@
         <br><br>
         <h4>QUESTÃO 6</h4>
 
-        <img src="img/imgQ6.PNG" alt="">
+        <img class="img" src="img/imgQ6.PNG" alt="">
         <p><i>FONTE: <a target="_blank" href="http://inep.gov.br/educacao-superior/enade/provas-e-gabaritos">Provas e
                     Gabaritos Enade</a></i></p>
 
