--- a/Q11a.html
+++ b/Q11a.html
@@ -152,7 +152,9 @@
                     text: `Parabéns! A alternativa correta realmente é a letra "b) As duas asserções são proposições verdadeiras, mas
                 a segunda não é uma justificativa correta da primeira."`
 
-                })
+                }).then(function() {
+                window.open ('Q12a.html','_self',false)
+                });
                 setInterval(() => {
                     window.open('Q12a.html', '_self', false)
                 }, 60000);
@@ -165,6 +167,9 @@
                     text: `Que pena, voce errou! A alternativa correta é a letra: "b) As duas asserções são proposições verdadeiras, mas
                 a segunda não é uma justificativa correta da primeira."`
                 })
+                .then(function() {
+                window.open ('Q12a.html','_self',false)
+                });
                 setInterval(() => {
                     window.open('Q12a.html', '_self', false)
                 }, 60000);
