--- a/Q16a.html
+++ b/Q16a.html
@@ -158,7 +158,9 @@
 			text: `Parabéns! A alternativa correta realmente é a letra "b) As duas asserções são proposições verdadeiras, mas
                 a segunda não é uma justificativa correta da primeira."`
               
-		  })
+		  }).then(function() {
+		  window.open ('Q17a.html','_self',false)
+		  });
             setInterval(() => {
                 window.open ('Q17a.html','_self',false)
             }, 60000);
@@ -170,7 +172,9 @@
 			title: 'Oops...',
 			text: `Que pena, voce errou! A alternativa correta é a letra: "b) As duas asserções são proposições verdadeiras, mas
                 a segunda não é uma justificativa correta da primeira."`
-		  })
+		  }).then(function() {
+		  window.open ('Q17a.html','_self',false)
+		  });
           setInterval(() => {
             window.open ('Q17a.html','_self',false)
           }, 60000);
