--- a/Q17a.html
+++ b/Q17a.html
@@ -128,7 +128,9 @@
 			title: 'Boa!!',
 			text: `Parabéns! A alternativa correta realmente é a letra "e) a fase de otimização."`
               
-		  })
+		  }).then(function() {
+		  window.open ('Q18a.html','_self',false)
+		  });
             setInterval(() => {
                 window.open ('Q18a.html','_self',false)
             }, 60000);
@@ -139,7 +141,9 @@
 			icon: 'error',
 			title: 'Oops...',
 			text: `Que pena, voce errou! A alternativa correta é a letra: "e) a fase de otimização."`
-		  })
+		  }).then(function() {
+		  window.open ('Q18a.html','_self',false)
+		  });
           setInterval(() => {
             window.open ('Q18a.html','_self',false)
           }, 60000);
