--- a/Q18a.html
+++ b/Q18a.html
@@ -163,7 +163,9 @@
 			title: 'Boa!!',
 			text: `Parabéns! A alternativa correta realmente é a letra "c) I e III."`
               
-		  })
+		  }).then(function() {
+		  window.open ('Q19a.html','_self',false)
+		  });
             setInterval(() => {
                 window.open ('Q19a.html','_self',false)
             }, 60000);
@@ -174,7 +176,9 @@
 			icon: 'error',
 			title: 'Oops...',
 			text: `Que pena, voce errou! A alternativa correta é a letra: "c) I e III."`
-		  })
+		  }).then(function() {
+		  window.open ('Q19a.html','_self',false)
+		  });
           setInterval(() => {
             window.open ('Q19a.html','_self',false)
           }, 60000);
