--- a/Q1a.html
+++ b/Q1a.html
@@ -146,8 +146,9 @@
 			icon: 'success',
 			title: 'Boa!!',
 			text: `Parabéns! A alternativa correta realmente é a letra "d) o trabalho compulsório de escravos proporcionou privilégios aos príncipes."`
-              
-		  })
+		  }).then(function() {
+		    window.open ('Q2a.html','_self',false)
+		  });
             setInterval(() => {
                 window.open ('Q2a.html','_self',false)
             }, 60000);
@@ -158,9 +159,11 @@
 			icon: 'error',
 			title: 'Oops...',
 			text: `Que pena, voce errou! A alternativa correta é a letra: "d) o trabalho compulsório de escravos proporcionou privilégios aos príncipes."`
-		  })
+		  }).then(function() {
+		    window.open ('Q2a.html','_self',false)
+		  });
           setInterval(() => {
-            window.open ('Q2a.html','_self',false)
+          window.open ('Q2a.html','_self',false)
           }, 60000);
         }
     }
