--- a/Q20a.html
+++ b/Q20a.html
@@ -151,7 +151,9 @@
                 como seus produtos são criados, relacionados e
                 representados."`
               
-		  })
+		  }).then(function() {
+		  window.open ('Q21a.html','_self',false)
+		  });
             setInterval(() => {
                 window.open ('Q21a.html','_self',false)
             }, 60000);
@@ -164,7 +166,9 @@
 			text: `Que pena, voce errou! A alternativa correta é a letra: "a) o sistema deve ser independente da maneira
                 como seus produtos são criados, relacionados e
                 representados."`
-		  })
+		  }).then(function() {
+		  window.open ('Q21a.html','_self',false)
+		  });
           setInterval(() => {
             window.open ('Q21a.html','_self',false)
           }, 60000);
