--- a/Q21a.html
+++ b/Q21a.html
@@ -143,7 +143,9 @@
 			title: 'Boa!!',
 			text: `Parabéns! A alternativa correta realmente é a letra "c) I e IV."`
               
-		  })
+		  }).then(function() {
+		  window.open ('Q22a.html','_self',false)
+		  });
             setInterval(() => {
                 window.open ('Q22a.html','_self',false)
             }, 60000);
@@ -154,7 +156,9 @@
 			icon: 'error',
 			title: 'Oops...',
 			text: `Que pena, voce errou! A alternativa correta é a letra: "c) I e IV."`
-		  })
+		  }).then(function() {
+		  window.open ('Q22a.html','_self',false)
+		  });
           setInterval(() => {
             window.open ('Q22a.html','_self',false)
           }, 60000);
