--- a/Q23a.html
+++ b/Q23a.html
@@ -150,10 +150,12 @@
 			title: 'Boa!!',
 			text: `Parabéns! A alternativa correta realmente é a letra "e) 9"`
               
-		  })
-            setInterval(() => {
-                window.open ('Q24a.html','_self',false)
-            }, 60000);
+		  }).then(function() {
+		  window.open ('Q24a.html','_self',false)
+		  });
+		  setInterval(() => {
+		  window.open ('Q24a.html','_self',false)
+		  }, 60000);
         }   
         
         else {
@@ -161,10 +163,12 @@
 			icon: 'error',
 			title: 'Oops...',
 			text: `Que pena, voce errou! A alternativa correta é a letra: "e) 9"`
-		  })
-          setInterval(() => {
-            window.open ('Q24a.html','_self',false)
-          }, 60000);
+		  }).then(function() {
+		  window.open ('Q24a.html','_self',false)
+		  });
+		  setInterval(() => {
+		  window.open ('Q24a.html','_self',false)
+		  }, 60000);
         }
     }
     else{
