--- a/Q25a.html
+++ b/Q25a.html
@@ -129,10 +129,12 @@
 			text: `Parabéns! A alternativa correta realmente é a letra "d) verificar a existência de defeitos após alterações em
                 um sistema (ou parte dele) já testado."`
               
-		  })
-            setInterval(() => {
-                window.open ('Q26a.html','_self',false)
-            }, 60000);
+		  }).then(function() {
+		  window.open ('Q26a.html','_self',false)
+		  });
+		  setInterval(() => {
+		  window.open ('Q26a.html','_self',false)
+		  }, 60000);
         }   
         
         else {
@@ -141,10 +143,12 @@
 			title: 'Oops...',
 			text: `Que pena, voce errou! A alternativa correta é a letra: "d) verificar a existência de defeitos após alterações em
                 um sistema (ou parte dele) já testado."`
-		  })
-          setInterval(() => {
-            window.open ('Q26a.html','_self',false)
-          }, 60000);
+		  }).then(function() {
+		  window.open ('Q26a.html','_self',false)
+		  });
+		  setInterval(() => {
+		  window.open ('Q26a.html','_self',false)
+		  }, 60000);
         }
     }
     else{
