--- a/Q27a.html
+++ b/Q27a.html
@@ -144,7 +144,9 @@
 			text: `Parabéns! A alternativa correta realmente é a letra "d) A primeira asserção é uma proposição falsa, e a
                 segunda, uma proposição verdadeira."`
               
-		  })
+		  }).then(function() {
+		  window.open ('Q28a.html','_self',false)
+		  });
             setInterval(() => {
                 window.open ('Q28a.html','_self',false)
             }, 60000);
@@ -156,7 +158,9 @@
 			title: 'Oops...',
 			text: `Que pena, voce errou! A alternativa correta é a letra: "d) A primeira asserção é uma proposição falsa, e a
                 segunda, uma proposição verdadeira."`
-		  })
+		  }).then(function() {
+		  window.open ('Q28a.html','_self',false)
+		  });
           setInterval(() => {
             window.open ('Q28a.html','_self',false)
           }, 60000);
