--- a/Q29a.html
+++ b/Q29a.html
@@ -150,7 +150,9 @@
 			icon: 'success',
 			title: 'Boa!!',
 			text: `Parabéns! A alternativa correta realmente é a letra "a) 11 e 29."`
-		  })
+		  }).then(function() {
+		  window.open ('Q30a.html','_self',false)
+		  });
             setInterval(() => {
                 window.open ('Q30a.html','_self',false)
             }, 60000);
@@ -161,7 +163,9 @@
 			icon: 'error',
 			title: 'Oops...',
 			text: `Que pena, voce errou! A alternativa correta é a letra: "a) 11 e 29."`
-		  })
+		  }).then(function() {
+		  window.open ('Q30a.html','_self',false)
+		  });
           setInterval(() => {
             window.open ('Q30a.html','_self',false)
           }, 60000);
