--- a/Q30a.html
+++ b/Q30a.html
@@ -138,7 +138,9 @@
 			title: 'Boa!!',
 			text: `Parabéns! A alternativa correta realmente é a letra "a) As duas asserções são proposições verdadeiras, e a
                 segunda é uma justificativa correta da primeira."`
-		  })
+		  }).then(function() {
+		  window.open ('Q31a.html','_self',false)
+		  });
             setInterval(() => {
                 window.open ('Q31a.html','_self',false)
             }, 60000);
@@ -150,7 +152,9 @@
 			title: 'Oops...',
 			text: `Que pena, voce errou! A alternativa correta é a letra: "a) As duas asserções são proposições verdadeiras, e a
                 segunda é uma justificativa correta da primeira."`
-		  })
+		  }).then(function() {
+		  window.open ('Q31a.html','_self',false)
+		  });
           setInterval(() => {
             window.open ('Q31a.html','_self',false)
           }, 60000);
