--- a/Q34a.html
+++ b/Q34a.html
@@ -157,7 +157,9 @@
 			title: 'Boa!!',
 			text: `Parabéns! A alternativa correta realmente é a letra "a) As duas asserções são proposições verdadeiras, e a
                 segunda é uma justificativa correta da primeira."`
-		  })
+		  }).then(function() {
+		  window.open ('Q35a.html','_self',false)
+		  });
             setInterval(() => {
                 window.open ('Q35a.html','_self',false)
             }, 60000);
@@ -169,7 +171,9 @@
 			title: 'Oops...',
 			text: `Que pena, voce errou! A alternativa correta é a letra: "a) As duas asserções são proposições verdadeiras, e a
                 segunda é uma justificativa correta da primeira."`
-		  })
+		  }).then(function() {
+		  window.open ('Q35a.html','_self',false)
+		  });
           setInterval(() => {
             window.open ('Q35a.html','_self',false)
           }, 60000);
