--- a/Q7a.html
+++ b/Q7a.html
@@ -152,7 +152,9 @@
                 socioeconômicos e os valores reais do consumo e da
                 preservação."`
 
-                })
+                }).then(function() {
+                window.open ('Q8a.html','_self',false)
+                });
                 setInterval(() => {
                     window.open('Q8a.html', '_self', false)
                 }, 60000);
@@ -166,7 +168,9 @@
                 avaliação de custo-benefício que reflitam os efeitos
                 socioeconômicos e os valores reais do consumo e da
                 preservação."`
-                })
+                }).then(function() {
+                window.open ('Q8a.html','_self',false)
+                });
                 setInterval(() => {
                     window.open('Q8a.html', '_self', false)
                 }, 60000);
