--- a/Q8a.html
+++ b/Q8a.html
@@ -159,7 +159,9 @@
                     title: 'Boa!!',
                     text: `Parabéns! A alternativa correta realmente é a letra "e) II, III e IV."`
 
-                })
+                }).then(function() {
+                window.open ('Q9a.html','_self',false)
+                });
                 setInterval(() => {
                     window.open('Q9a.html', '_self', false)
                 }, 60000);
@@ -170,7 +172,9 @@
                     icon: 'error',
                     title: 'Oops...',
                     text: `Que pena, voce errou! A alternativa correta é a letra: "e) II, III e IV."`
-                })
+                }).then(function() {
+                window.open ('Q9a.html','_self',false)
+                });
                 setInterval(() => {
                     window.open('Q9a.html', '_self', false)
                 }, 60000);
