--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <hr>
         <a class="btn btn-primary" type="submit" href="instrucoes.html">Instruções do Simulado</a>
 
-        <a class="btn btn-primary" type="submit" href="Q1a.html">INICIAR SIMULADO PMI</a>
+        <a class="btn btn-primary" type="submit" href="Q1a.html">Iniciar Simulado PMI</a>
 
         <br>
         <hr>
