--- a/Q10a.html
+++ b/Q10a.html
@@ -146,7 +146,9 @@
                 conjuntamente, os quais, quando utilizados corretamente
                 e apropriadamente, reduzem problemas individuais."`
 
-                })
+                }).then(function() {
+                window.open ('Q11a.html','_self',false)
+                });
                 setInterval(() => {
                     window.open('Q11a.html', '_self', false)
                 }, 60000);
@@ -159,7 +161,9 @@
                     text: `Que pena, voce errou! A alternativa correta é a letra: "a) elaboram e utilizam padrões de codificação
                 conjuntamente, os quais, quando utilizados corretamente
                 e apropriadamente, reduzem problemas individuais."`
-                })
+                }).then(function() {
+                window.open ('Q11a.html','_self',false)
+                });
                 setInterval(() => {
                     window.open('Q11a.html', '_self', false)
                 }, 60000);
