--- a/Q12a.html
+++ b/Q12a.html
@@ -149,7 +149,9 @@
                     title: 'Boa!!',
                     text: `Parabéns! A alternativa correta realmente é a letra "b) II e IV. "`
 
-                })
+                }).then(function() {
+                window.open ('Q13a.html','_self',false)
+                });
                 setInterval(() => {
                     window.open('Q13a.html', '_self', false)
                 }, 60000);
@@ -160,7 +162,9 @@
                     icon: 'error',
                     title: 'Oops...',
                     text: `Que pena, voce errou! A alternativa correta é a letra: "b) II e IV."`
-                })
+                }).then(function() {
+                window.open ('Q13a.html','_self',false)
+                });
                 setInterval(() => {
                     window.open('Q13a.html', '_self', false)
                 }, 60000);
