--- a/Q14a.html
+++ b/Q14a.html
@@ -125,7 +125,9 @@
 			title: 'Boa!!',
 			text: `Parabéns! A alternativa correta realmente é a letra "c) a beleza da princesa é desperdiçada pela miscigenação racial."`
               
-		  })
+		  }).then(function() {
+		  window.open ('Q15a.html','_self',false)
+		  });
             setInterval(() => {
                 window.open ('Q15a.html','_self',false)
             }, 60000);
@@ -136,7 +138,9 @@
 			icon: 'error',
 			title: 'Oops...',
 			text: `Que pena, voce errou! A alternativa correta é a letra: "c) a beleza da princesa é desperdiçada pela miscigenação racial."`
-		  })
+		  }).then(function() {
+		  window.open ('Q15a.html','_self',false)
+		  });
           setInterval(() => {
             window.open ('Q15a.html','_self',false)
           }, 60000);
