--- a/Q15a.html
+++ b/Q15a.html
@@ -157,9 +157,10 @@
 			icon: 'success',
 			title: 'Boa!!',
 			text: `Parabéns! A alternativa correta realmente é a letra "b) As duas asserções são proposições verdadeiras, mas
-                a segunda não é uma justificativa correta da primeira."`
-              
-		  })
+                a segunda não é uma justificativa correta da primeira."`  
+		  }).then(function() {
+		  window.open ('Q16a.html','_self',false)
+		  });
             setInterval(() => {
                 window.open ('Q16a.html','_self',false)
             }, 60000);
@@ -171,7 +172,9 @@
 			title: 'Oops...',
 			text: `Que pena, voce errou! A alternativa correta é a letra: "b) As duas asserções são proposições verdadeiras, mas
                 a segunda não é uma justificativa correta da primeira."`
-		  })
+		  }).then(function() {
+		  window.open ('Q16a.html','_self',false)
+		  });
           setInterval(() => {
             window.open ('Q16a.html','_self',false)
           }, 60000);
