--- a/Q19a.html
+++ b/Q19a.html
@@ -136,7 +136,9 @@
 			title: 'Boa!!',
 			text: `Parabéns! A alternativa correta realmente é a letra "b) II."`
               
-		  })
+		  }).then(function() {
+		  window.open ('Q20a.html','_self',false)
+		  });
             setInterval(() => {
                 window.open ('Q20a.html','_self',false)
             }, 60000);
@@ -147,7 +149,9 @@
 			icon: 'error',
 			title: 'Oops...',
 			text: `Que pena, voce errou! A alternativa correta é a letra: "b) II."`
-		  })
+		  }).then(function() {
+		  window.open ('Q20a.html','_self',false)
+		  });
           setInterval(() => {
             window.open ('Q20a.html','_self',false)
           }, 60000);
