--- a/Q24a.html
+++ b/Q24a.html
@@ -157,10 +157,12 @@
 			title: 'Boa!!',
 			text: `Parabéns! A alternativa correta realmente é a letra "e) I, II e V."`
               
-		  })
-            setInterval(() => {
-                window.open ('Q25a.html','_self',false)
-            }, 60000);
+		  }).then(function() {
+		  window.open ('Q25a.html','_self',false)
+		  });
+		  setInterval(() => {
+		  window.open ('Q25a.html','_self',false)
+		  }, 60000);
         }   
         
         else {
@@ -168,10 +170,12 @@
 			icon: 'error',
 			title: 'Oops...',
 			text: `Que pena, voce errou! A alternativa correta é a letra: "e) I, II e V."`
-		  })
-          setInterval(() => {
-            window.open ('Q25a.html','_self',false)
-          }, 60000);
+			}).then(function() {
+			window.open ('Q25a.html','_self',false)
+			});
+			setInterval(() => {
+			window.open ('Q25a.html','_self',false)
+			}, 60000);
         }
     }
     else{
