--- a/Q26a.html
+++ b/Q26a.html
@@ -157,7 +157,9 @@
 			title: 'Boa!!',
 			text: `Parabéns! A alternativa correta realmente é a letra "c) I e III."`
               
-		  })
+		  }).then(function() {
+		  window.open ('Q27a.html','_self',false)
+		  });
             setInterval(() => {
                 window.open ('Q27a.html','_self',false)
             }, 60000);
@@ -168,7 +170,9 @@
 			icon: 'error',
 			title: 'Oops...',
 			text: `Que pena, voce errou! A alternativa correta é a letra: "c) I e III."`
-		  })
+		  }).then(function() {
+		  window.open ('Q27a.html','_self',false)
+		  });
           setInterval(() => {
             window.open ('Q27a.html','_self',false)
           }, 60000);
