--- a/Q2a.html
+++ b/Q2a.html
@@ -158,7 +158,9 @@ function correçao2() {
 			title: 'Boa!!',
 			text: `Parabéns! A alternativa correta realmente é a letra: "a) I e II."`
               
-		  })
+		  }).then(function() {
+		    window.open ('Q3a.html','_self',false)
+		  });
             setInterval(() => {
                 window.open ('Q3a.html','_self',false)
             }, 60000);
@@ -169,7 +171,9 @@ function correçao2() {
 			icon: 'error',
 			title: 'Oops...',
 			text: `Que pena, voce errou! A alternativa correta é a letra: "a) I e II."`
-		  })
+		  }).then(function() {
+		    window.open ('Q3a.html','_self',false)
+		  });
           setInterval(() => {
             window.open ('Q3a.html','_self',false)
           }, 60000);
