--- a/Q31a.html
+++ b/Q31a.html
@@ -152,7 +152,9 @@
 			icon: 'success',
 			title: 'Boa!!',
 			text: `Parabéns! A alternativa correta realmente é a letra "c) I e II."`
-		  })
+		  }).then(function() {
+		  window.open ('Q32a.html','_self',false)
+		  });
             setInterval(() => {
                 window.open ('Q32a.html','_self',false)
             }, 60000);
@@ -163,7 +165,9 @@
 			icon: 'error',
 			title: 'Oops...',
 			text: `Que pena, voce errou! A alternativa correta é a letra: "c) I e II."`
-		  })
+		  }).then(function() {
+		  window.open ('Q32a.html','_self',false)
+		  });
           setInterval(() => {
             window.open ('Q32a.html','_self',false)
           }, 60000);
