--- a/Q32a.html
+++ b/Q32a.html
@@ -129,7 +129,9 @@
 			title: 'Boa!!',
 			text: `Parabéns! A alternativa correta realmente é a letra "c) está em conformidade com as normas ISO/IEC 12207
                 e 15504."`
-		  })
+		  }).then(function() {
+		  window.open ('Q33a.html','_self',false)
+		  });
             setInterval(() => {
                 window.open ('Q33a.html','_self',false)
             }, 60000);
@@ -141,7 +143,9 @@
 			title: 'Oops...',
 			text: `Que pena, voce errou! A alternativa correta é a letra: "c) está em conformidade com as normas ISO/IEC 12207
                 e 15504."`
-		  })
+		  }).then(function() {
+		  window.open ('Q33a.html','_self',false)
+		  });
           setInterval(() => {
             window.open ('Q33a.html','_self',false)
           }, 60000);
