--- a/Q33a.html
+++ b/Q33a.html
@@ -161,7 +161,9 @@
 			icon: 'success',
 			title: 'Boa!!',
 			text: `Parabéns! A alternativa correta realmente é a letra "d) 40; 30; 4."`
-		  })
+		  }).then(function() {
+		  window.open ('Q34a.html','_self',false)
+		  });
             setInterval(() => {
                 window.open ('Q34a.html','_self',false)
             }, 60000);
@@ -172,7 +174,9 @@
 			icon: 'error',
 			title: 'Oops...',
 			text: `Que pena, voce errou! A alternativa correta é a letra: "d) 40; 30; 4."`
-		  })
+		  }).then(function() {
+		  window.open ('Q34a.html','_self',false)
+		  });
           setInterval(() => {
             window.open ('Q34a.html','_self',false)
           }, 60000);
