--- a/Q3a.html
+++ b/Q3a.html
@@ -159,9 +159,10 @@
 			icon: 'success',
 			title: 'Boa!!',
 			text: `Parabéns! A alternativa correta realmente é a letra: "e) incorpora valores do Iluminismo ao favorecer o
-                compartilhamento de informações e conhecimentos."`
-              
-		  })
+                compartilhamento de informações e conhecimentos."` 
+		  }).then(function() {
+		    window.open ('Q4a.html','_self',false)
+		  });
             setInterval(() => {
                 window.open ('Q4a.html','_self',false)
             }, 60000);
@@ -173,7 +174,9 @@
 			title: 'Oops...',
 			text: `Que pena, voce errou! A alternativa correta é a letra : "e) incorpora valores do Iluminismo ao favorecer o
                 compartilhamento de informações e conhecimentos."`
-		  })
+		  }).then(function() {
+		    window.open ('Q4a.html','_self',false)
+		  });
           setInterval(() => {
             window.open ('Q4a.html','_self',false)
           }, 60000);
