--- a/Q4a.html
+++ b/Q4a.html
@@ -161,7 +161,9 @@
                     text: `Parabéns! A alternativa correta realmente é a letra: "a) As duas são proposições verdadeiras, e a segunda é
                 uma justificativa correta da primeira."`
 
-                })
+                }).then(function() {
+                window.open ('Q5a.html','_self',false)
+                });
                 setInterval(() => {
                     window.open('Q5a.html', '_self', false)
                 }, 60000);
@@ -173,7 +175,9 @@
                     title: 'Oops...',
                     text: `Que pena, voce errou! A alternativa correta é a letra: "a) As duas são proposições verdadeiras, e a segunda é
                 uma justificativa correta da primeira."`
-                })
+                }).then(function() {
+                window.open ('Q5a.html','_self',false)
+                });
                 setInterval(() => {
                     window.open('Q5a.html', '_self', false)
                 }, 60000);
