--- a/Q5a.html
+++ b/Q5a.html
@@ -139,7 +139,9 @@
                     text: `Parabéns! A alternativa correta realmente é a letra: "c) três estados brasileiros responderam por 84% do desmatamento na Amazônia Legal entre agosto de 2010 e
                 junho de 2011."`
 
-                })
+                }).then(function() {
+                window.open ('Q6a.html','_self',false)
+                });
                 setInterval(() => {
                     window.open('Q6a.html', '_self', false)
                 }, 60000);
@@ -151,7 +153,9 @@
                     title: 'Oops...',
                     text: `Que pena, voce errou! A alternativa correta é a letra: "a) As duas são proposições verdadeiras, e a segunda é
                 uma justificativa correta da primeira."`
-                })
+                }).then(function() {
+                window.open ('Q6a.html','_self',false)
+                });
                 setInterval(() => {
                     window.open('Q6a.html', '_self', false)
                 }, 60000);
