--- a/Q9a.html
+++ b/Q9a.html
@@ -144,7 +144,9 @@
                     title: 'Boa!!',
                     text: `Parabéns! A alternativa correta realmente é a letra "b) II e III."`
 
-                })
+                }).then(function() {
+                window.open ('Q10a.html','_self',false)
+                });
                 setInterval(() => {
                     window.open('Q10a.html', '_self', false)
                 }, 60000);
@@ -155,7 +157,9 @@
                     icon: 'error',
                     title: 'Oops...',
                     text: `Que pena, voce errou! A alternativa correta é a letra: "b) II e III."`
-                })
+                }).then(function() {
+                window.open ('Q10a.html','_self',false)
+                });
                 setInterval(() => {
                     window.open('Q10a.html', '_self', false)
                 }, 60000);
