ajuste imagens css

--- a/Q22a.html
+++ b/Q22a.html
@@ -40,7 +40,7 @@
             do relatório, Pedro tem que fazer uma consulta utilizando o comando <i>SELECT</i> da linguagem SQL.
         </p>
 
-        <img class="img" src="img/imgQ22.PNG" alt="">
+        <img class="img2" src="img/imgQ22.PNG" alt="">
         <p><i>FONTE: <a target="_blank" href="http://inep.gov.br/educacao-superior/enade/provas-e-gabaritos">Provas e
                     Gabaritos Enade</a></i></p>
 
