--- a/Q23a.html
+++ b/Q23a.html
@@ -54,7 +54,7 @@
             muitos para muitos.
         </p>
 
-        <img class="img" src="img/imgQ23.PNG" alt="">
+        <img class="img3" src="img/imgQ23.PNG" alt="">
         <p><i>FONTE: <a target="_blank" href="http://inep.gov.br/educacao-superior/enade/provas-e-gabaritos">Provas e
                     Gabaritos Enade</a></i></p>
 
