redirecionamento do botao do popup

--- a/Q10a.html
+++ b/Q10a.html
@@ -145,8 +145,9 @@
                     text: `Parabéns! A alternativa correta realmente é a letra "a) elaboram e utilizam padrões de codificação
                 conjuntamente, os quais, quando utilizados corretamente
                 e apropriadamente, reduzem problemas individuais."`
-
-                })
+                }).then(function () {
+                    window.location = 'Q11a.html';
+                });
                 setInterval(() => {
                     window.open('Q11a.html', '_self', false)
                 }, 60000);
@@ -159,7 +160,9 @@
                     text: `Que pena, voce errou! A alternativa correta é a letra: "a) elaboram e utilizam padrões de codificação
                 conjuntamente, os quais, quando utilizados corretamente
                 e apropriadamente, reduzem problemas individuais."`
-                })
+                }).then(function () {
+                    window.location = 'Q11a.html';
+                });
                 setInterval(() => {
                     window.open('Q11a.html', '_self', false)
                 }, 60000);
