--- a/Q12a.html
+++ b/Q12a.html
@@ -148,8 +148,9 @@
                     icon: 'success',
                     title: 'Boa!!',
                     text: `Parabéns! A alternativa correta realmente é a letra "b) II e IV. "`
-
-                })
+                }).then(function () {
+                    window.location = 'Q13a.html';
+                });
                 setInterval(() => {
                     window.open('Q13a.html', '_self', false)
                 }, 60000);
@@ -160,7 +161,9 @@
                     icon: 'error',
                     title: 'Oops...',
                     text: `Que pena, voce errou! A alternativa correta é a letra: "b) II e IV."`
-                })
+                }).then(function () {
+                    window.location = 'Q13a.html';
+                });
                 setInterval(() => {
                     window.open('Q13a.html', '_self', false)
                 }, 60000);
