--- a/Q13a.html
+++ b/Q13a.html
@@ -141,8 +141,9 @@
                     icon: 'success',
                     title: 'Boa!!',
                     text: `Parabéns! A alternativa correta realmente é a letra "e) II e III."`
-
-                })
+                }).then(function () {
+                    window.location = 'Q14a.html';
+                });
                 setInterval(() => {
                     window.open('Q14a.html', '_self', false)
                 }, 60000);
@@ -153,7 +154,9 @@
                     icon: 'error',
                     title: 'Oops...',
                     text: `Que pena, voce errou! A alternativa correta é a letra: "e) II e III."`
-                })
+                }).then(function () {
+                    window.location = 'Q14a.html';
+                });
                 setInterval(() => {
                     window.open('Q14a.html', '_self', false)
                 }, 60000);
