--- a/Q22a.html
+++ b/Q22a.html
@@ -148,8 +148,9 @@
                     text: `Parabéns! A alternativa correta realmente é a letra "d) SELECT NOME, CODIGO_MALOTE, DESCRICAO,SITUACAO_MALOTE FROM MALOTES INNER JOIN CONTEUDOS
                 ON (MALOTES.CODIGO_CONTEUDO = CONTEUDOS.CODIGO_CONTEUDO)INNER JOIN FUNCIONARIOS
                 ON(MALOTES.MATRICULA = FUNCIONARIOS.MATRICULA);"`
-
-                })
+                }).then(function () {
+                    window.location = 'Q23a.html';
+                });
                 setInterval(() => {
                     window.open('Q23a.html', '_self', false)
                 }, 60000);
@@ -162,7 +163,9 @@
                     text: `Que pena, voce errou! A alternativa correta é a letra: "d) SELECT NOME, CODIGO_MALOTE, DESCRICAO,SITUACAO_MALOTE FROM MALOTES INNER JOIN CONTEUDOS
                 ON (MALOTES.CODIGO_CONTEUDO = CONTEUDOS.CODIGO_CONTEUDO)INNER JOIN FUNCIONARIOS
                 ON(MALOTES.MATRICULA = FUNCIONARIOS.MATRICULA);"`
-                })
+                }).then(function () {
+                    window.location = 'Q23a.html';
+                });
                 setInterval(() => {
                     window.open('Q23a.html', '_self', false)
                 }, 60000);
