--- a/Q7a.html
+++ b/Q7a.html
@@ -151,8 +151,9 @@
                 avaliação de custo-benefício que reflitam os efeitos
                 socioeconômicos e os valores reais do consumo e da
                 preservação."`
-
-                })
+                }).then(function () {
+                    window.location = 'Q8a.html';
+                });
                 setInterval(() => {
                     window.open('Q8a.html', '_self', false)
                 }, 60000);
@@ -166,7 +167,9 @@
                 avaliação de custo-benefício que reflitam os efeitos
                 socioeconômicos e os valores reais do consumo e da
                 preservação."`
-                })
+                }).then(function () {
+                    window.location = 'Q8a.html';
+                });
                 setInterval(() => {
                     window.open('Q8a.html', '_self', false)
                 }, 60000);
