--- a/Q8a.html
+++ b/Q8a.html
@@ -158,8 +158,9 @@
                     icon: 'success',
                     title: 'Boa!!',
                     text: `Parabéns! A alternativa correta realmente é a letra "e) II, III e IV."`
-
-                })
+                }).then(function () {
+                    window.location = 'Q9a.html';
+                });
                 setInterval(() => {
                     window.open('Q9a.html', '_self', false)
                 }, 60000);
@@ -170,7 +171,9 @@
                     icon: 'error',
                     title: 'Oops...',
                     text: `Que pena, voce errou! A alternativa correta é a letra: "e) II, III e IV."`
-                })
+                }).then(function () {
+                    window.location = 'Q9a.html';
+                });
                 setInterval(() => {
                     window.open('Q9a.html', '_self', false)
                 }, 60000);
