--- a/Q9a.html
+++ b/Q9a.html
@@ -143,8 +143,9 @@
                     icon: 'success',
                     title: 'Boa!!',
                     text: `Parabéns! A alternativa correta realmente é a letra "b) II e III."`
-
-                })
+                }).then(function () {
+                    window.location = 'Q10a.html';
+                });
                 setInterval(() => {
                     window.open('Q10a.html', '_self', false)
                 }, 60000);
@@ -155,7 +156,9 @@
                     icon: 'error',
                     title: 'Oops...',
                     text: `Que pena, voce errou! A alternativa correta é a letra: "b) II e III."`
-                })
+                }).then(function () {
+                    window.location = 'Q10a.html';
+                });
                 setInterval(() => {
                     window.open('Q10a.html', '_self', false)
                 }, 60000);
