--- a/Q4a.html
+++ b/Q4a.html
@@ -160,8 +160,9 @@
                     title: 'Boa!!',
                     text: `Parabéns! A alternativa correta realmente é a letra: "a) As duas são proposições verdadeiras, e a segunda é
                 uma justificativa correta da primeira."`
-
-                })
+                }).then(function () {
+                    window.location = 'Q5a.html';
+                });
                 setInterval(() => {
                     window.open('Q5a.html', '_self', false)
                 }, 60000);
@@ -173,7 +174,9 @@
                     title: 'Oops...',
                     text: `Que pena, voce errou! A alternativa correta é a letra: "a) As duas são proposições verdadeiras, e a segunda é
                 uma justificativa correta da primeira."`
-                })
+                }).then(function () {
+                    window.location = 'Q5a.html';
+                });
                 setInterval(() => {
                     window.open('Q5a.html', '_self', false)
                 }, 60000);
