--- a/Q5a.html
+++ b/Q5a.html
@@ -138,8 +138,9 @@
                     title: 'Boa!!',
                     text: `Parabéns! A alternativa correta realmente é a letra: "c) três estados brasileiros responderam por 84% do desmatamento na Amazônia Legal entre agosto de 2010 e
                 junho de 2011."`
-
-                })
+                }).then(function () {
+                    window.location = 'Q6a.html';
+                });
                 setInterval(() => {
                     window.open('Q6a.html', '_self', false)
                 }, 60000);
@@ -151,7 +152,9 @@
                     title: 'Oops...',
                     text: `Que pena, voce errou! A alternativa correta é a letra: "a) As duas são proposições verdadeiras, e a segunda é
                 uma justificativa correta da primeira."`
-                })
+                }).then(function () {
+                    window.location = 'Q6a.html';
+                });
                 setInterval(() => {
                     window.open('Q6a.html', '_self', false)
                 }, 60000);
