--- a/Q6a.html
+++ b/Q6a.html
@@ -131,8 +131,9 @@
                     title: 'Boa!!',
                     text: `Parabéns! A alternativa correta realmente é a letra: "b) às oportunidades de melhoria salarial que surgem à medida
                 que aumenta o nível de escolaridade dos indivíduos."`
-
-                })
+                }).then(function () {
+                    window.location = 'Q7a.html';
+                });
                 setInterval(() => {
                     window.open('Q7a.html', '_self', false)
                 }, 60000);
@@ -144,7 +145,9 @@
                     title: 'Oops...',
                     text: `Que pena, voce errou! A alternativa correta é a letra: "b) às oportunidades de melhoria salarial que surgem à medida
                 que aumenta o nível de escolaridade dos indivíduos."`
-                })
+                }).then(function () {
+                    window.location = 'Q7a.html';
+                });
                 setInterval(() => {
                     window.open('Q7a.html', '_self', false)
                 }, 60000);
